<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rosa_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="24dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/tvBotonVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_volver"
            android:textColor="@color/rosa_acento"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBuzon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buzon"
            android:textColor="@color/gris_oscuro"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center" />

        <View android:layout_width="60dp" android:layout_height="1dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/contenedorMensajes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:padding="15dp">

        <EditText
            android:id="@+id/etInputMensaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_mensaje_hint"
            android:background="@color/rosa_fondo"
            android:padding="12dp"
            android:layout_marginEnd="10dp" />

        <Button
            android:id="@+id/btnEnviarMensjae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bton_enviar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/rosa_acento" />
    </LinearLayout>
</LinearLayout>
